Missed one other spot from 64235c18d8b0cb237ffda40c03685f2f7b692823

--- a/src/Belletrix.Web/Views/ActivityLog/View.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/View.cshtml
@@ -1,4 +1,5 @@
-﻿@using Belletrix.Entity.Enum;
+﻿@using Belletrix.Core;
+@using Belletrix.Entity.Enum;
 @using Belletrix.Entity.Model;
 @using Belletrix.Entity.ViewModel;
 
@@ -22,9 +23,9 @@
             <p>
                 @foreach (ActivityLogTypes type in Model.ActivityLog.Types)
                 {
-                    int i = (int)type % ViewBag.TypeLabels.Count;
-                    string labelClassName = ViewBag.TypeLabels.ContainsKey(i) ? ViewBag.TypeLabels[i] : ViewBag.TypeLabels[0];
-                    <span class="label @labelClassName">@type</span>
+                    <span class="label @Formatter.ActivityLogLabel(type, ViewBag.TypeLabels)">
+                        @type.GetDisplayName()
+                    </span>
                 }
             </p>
 
