--- a/src/Belletrix.Web/Views/Experience/List.cshtml
+++ b/src/Belletrix.Web/Views/Experience/List.cshtml
@@ -21,8 +21,11 @@
 
 @section Body {
     <div class="row">
-        <div class="col-lg-8">
-            <h1>Students Abroad <small>@Model.Count.ToString("N0") total</small></h1>
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Students Abroad
+                <small>@Model.Count.ToString("N0") total</small>
+            </h1>
         </div>
     </div>
 
