--- a/src/Belletrix.Web/Views/Promo/List.cshtml
+++ b/src/Belletrix.Web/Views/Promo/List.cshtml
@@ -16,13 +16,16 @@
 }
 
 @section Body {
-
     <div class="row">
-        <div class="col-lg-8">
-            <h1>Promos</h1>
-        </div>
-        <div class="col-lg-4 text-right">
-            <a href="@Url.Action("Add", "Promo")"><i class="glyphicon glyphicon-plus-sign"></i> Create New Promo</a>
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Promos
+                <small>
+                    <span class="pull-right small">
+                        <a href="@Url.Action("Add", "Promo")"><i class="glyphicon glyphicon-plus-sign"></i> Create New Promo</a>
+                    </span>
+                </small>
+            </h1>
         </div>
     </div>
 
