--- a/src/Belletrix.Web/Views/Student/List.cshtml
+++ b/src/Belletrix.Web/Views/Student/List.cshtml
@@ -17,11 +17,16 @@
 
 @section Body {
     <div class="row">
-        <div class="col-lg-8">
-            <h1>Students <small>@Model.Count().ToString("N0") total</small></h1>
-        </div>
-        <div class="col-lg-4 text-right">
-            <a href="@Url.Action("Add", "Student")"><i class="glyphicon glyphicon-plus-sign"></i> Add Student</a>
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Students
+                <small>@Model.Count().ToString("N0") total</small>
+                <small>
+                    <span class="pull-right small">
+                        <a href="@Url.Action("Add", "Student")"><i class="glyphicon glyphicon-plus-sign"></i> Add Student</a>
+                    </span>
+                </small>
+            </h1>
         </div>
     </div>
 
@@ -79,7 +84,7 @@
                     @foreach (StudentModel student in Model)
                     {
                         string noteTooltip = "Add Notes";
-                        string noteIcon = "glyphicon glyphicon-book";
+                        string noteClass = "btn-info";
 
                         if (student.NumberOfNotes > 0)
                         {
@@ -90,7 +95,7 @@
                                 noteTooltip += "s";
                             }
 
-                            noteIcon += " highlight-icon";
+                            noteClass = "btn-warning";
                         }
 
                         <tr>
@@ -114,19 +119,16 @@
                                 }
                             </td>
                             <td>
-                                <ul class="list-inline" style="margin-bottom: 0">
-                                    <li>
-                                        <a href="@Url.Action("List", "Note", new { studentId = student.Id })"
-                                           class="studentlisttooltop studentnote"
-                                           data-bt-studentname="@student.FirstName @student.MiddleName @student.LastName"
-                                           title="@noteTooltip"><i class="@noteIcon"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="@Url.Action("Edit", "Student", new { id = student.Id })"
-                                           class="studentlisttooltop" data-placement="top"
-                                           title="Edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                                    </li>
-                                </ul>
+                                <div class="btn-group">
+                                    <a href="@Url.Action("List", "Note", new { studentId = student.Id })"
+                                        class="btn btn-xs @noteClass studentlisttooltop studentnote"
+                                        data-bt-studentname="@student.FirstName @student.MiddleName @student.LastName"
+                                        title="@noteTooltip"><i class="glyphicon glyphicon-book"></i></a>
+
+                                    <a href="@Url.Action("Edit", "Student", new { id = student.Id })"
+                                        class="btn btn-xs btn-info" data-placement="top"
+                                        title="Edit"><i class="glyphicon glyphicon-pencil"></i></a>
+                                </div>
                             </td>
                         </tr>
                     }
