--- a/src/Belletrix.Web/Views/Student/View.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.Partial.cshtml
@@ -161,19 +161,31 @@
                 }
             </div>
             <div class="panel-footer">
-                <ul class="list-inline" style="margin-bottom: 0">
-                    <li>
-                        <a href="@Url.Action("List", "Note", new { studentId = Model.Id })"
-                           class="studentlisttooltop studentnote"
-                           data-bt-studentname="@Model.FirstName @Model.MiddleName @Model.LastName"
-                           title="Notes"><i class="glyphicon glyphicon-book"></i></a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Edit", "Student", new { id = Model.Id })"
-                           class="studentlisttooltop" data-placement="top"
-                           title="Edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                    </li>
-                </ul>
+                <div class="btn-group">
+                    @{ 
+                        string notes = "Notes";
+
+                        if (Model.NumberOfNotes > 0)
+                        {
+                            notes = Model.NumberOfNotes.ToString("N0") + " Note";
+
+                            if (Model.NumberOfNotes > 1)
+                            {
+                                notes += "s";
+                            }
+                        }
+                    }
+                    <a href="@Url.Action("List", "Note", new { studentId = Model.Id })"
+                        class="btn btn-sm btn-default studentlisttooltop studentnote"
+                        data-bt-studentname="@Model.FirstName @Model.MiddleName @Model.LastName"
+                        title="Notes">
+                        <i class="glyphicon glyphicon-book"></i>
+                        @notes
+                    </a>
+                    <a href="@Url.Action("Edit", "Student", new { id = Model.Id })"
+                        class="btn btn-sm btn-default studentlisttooltop" data-placement="top"
+                        title="Edit"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+                </div>
             </div>
         </div>
     </div>
