Update promos to user view models

--- a/src/Belletrix.Web/Views/Promo/Add.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Add.cshtml
@@ -1,6 +1,6 @@
-﻿@using Belletrix.Entity.Model;
+﻿@using Belletrix.Entity.ViewModel;
 
-@model PromoModel
+@model PromoCreateViewModel
 
 @{
     ViewBag.Title = "Add";
