--- a/src/Belletrix.Web/Views/Shared/_PromoLayout.cshtml
+++ b/src/Belletrix.Web/Views/Shared/_PromoLayout.cshtml
@@ -19,7 +19,7 @@
 
         <script>
             $(function () {
-                Belletrix.initPinger('@Url.Action("Ping", "Home")');
+                Belletrix.Common.initPinger('@Url.Action("Ping", "Home")');
             });
         </script>
     </body>
