--- a/src/Belletrix.Web/Views/Student/NameCheck.cshtml
+++ b/src/Belletrix.Web/Views/Student/NameCheck.cshtml
@@ -3,7 +3,7 @@
 
 @model IEnumerable<StudentModel>
 
-@if (Model.Count<StudentModel>() > 0)
+@if (Model.Count() > 0)
 {
     <div class="panel panel-danger">
         <div class="panel-heading">
