--- a/src/Belletrix.Web/Views/Promo/Add.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Add.cshtml
@@ -4,12 +4,15 @@
 
 @{
     ViewBag.Title = "Add";
+    HtmlHelper.ClientValidationEnabled = true;
+    HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
 }
 
 @section FooterScript {
     <script>
         $(function () {
-            new Belletrix.Promo('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
+            var promo = new Belletrix.Promo();
+            promo.initAddForm('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
             Belletrix.Common.singleSubmit();
         });
     </script>
@@ -34,33 +37,81 @@
 
 @section Body {
     <div class="row">
-        <div class="col-lg-8">
-            <h1>Add New Promo</h1>
+        <div class="col-lg-12">
+            <h1 class="page-header">Add Promo</h1>
         </div>
     </div>
 
-    @using (Html.BeginForm("Add", "Promo", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    @using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form", role = "form" }))
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary()
-        
-        <div class="form-group">
-            @Html.LabelFor(p => p.Description, new { @class = "control-label col-lg-2" })
 
-            <div class="col-lg-10">
-                @Html.TextBoxFor(p => p.Description, new { @class = "form-control "})
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Details</h3>
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group has-error has-feedback">
+                                    @Html.LabelFor(x => x.Code)
+                                    <span class="glyphicon glyphicon-question-sign text-primary" aria-hidden="true"
+                                        data-toggle="tooltip" title="Unique code used as a password into the data entry form."></span>
+                                    @Html.TextBoxFor(x => x.Code, new { @class = "form-control", autofocus = "autofocus" })
+                                    <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true" id="codecheckresult"></span>
+                                    @Html.ValidationMessageFor(x => x.Code)
+                                </div>
+                                <div class="form-group has-error">
+                                    @Html.LabelFor(x => x.Description)
+                                    @Html.TextBoxFor(x => x.Description, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.Description)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Optional</h3>
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(x => x.RequireCode)
+                                    <span class="glyphicon glyphicon-question-sign text-primary" aria-hidden="true"
+                                        data-toggle="tooltip" title="When disabled, allows users into the entry form without having to know the unique code."></span>
+                                    @Html.DropDownListFor(x => x.RequireCode, new SelectList(
+                                        new[]
+                                        {
+                                            new { Value = false, Text = "No" },
+                                            new { Value = true, Text = "Yes" }
+                                        },
+                                        "Value",
+                                        "Text",
+                                        true), new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.RequireCode)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(p => p.Code, new { @class = "control-label col-lg-2" })
-
-            <div class="col-lg-10 right-inner-addon">
-                <i class="glyphicon glyphicon-ok" id="codecheckresult"></i>
-                @Html.TextBoxFor(p => p.Code, new { @class = "form-control" })
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li><button type="submit" class="btn btn-default disabled">Create Promo</button></li>
+                    <li>@Html.ActionLink("Cancel", "List")</li>
+                </ul>
             </div>
         </div>
-
-        <button type="submit" class="btn btn-default disabled">Create Promo</button>
     }
 }
