Fix throwing HttpNotFound() in favor of more user-friendly approach
Also logs the attempts as an exception.

--- a/src/Belletrix.Web/Views/Error/NotFound.cshtml
+++ b/src/Belletrix.Web/Views/Error/NotFound.cshtml
@@ -5,7 +5,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>An Error Occured - Belletrix</title>
+        <title>Not Found - Belletrix</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         @Styles.Render("~/bundles/css")
@@ -13,11 +13,10 @@
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>Oh Dear!</h1>
+                <h1>Not Found</h1>
             </div>
             <p class="lead">
-                There was an error in the page you just tried to submit. To
-                work around it, please login into Belletrix and try again.
+                The action you just took was somehow invalid.
             </p>
             <p>Start over at the @Html.ActionLink("login page", "Index", "Login").</p>
         </div>
